# anchora

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.go  config.yaml  go.mod  go.sum  main.go  main.py  pyproject.toml  statemachine.go  types.go  workflow.go
anchora/: agents.py  config.py  integrations.py  models.py  store.py
anchora/activities/: order.py
anchora/api/: app.py  schemas.py  starter.py
anchora/db/: models.py
anchora/mocks/: inventory_api.py  stripe_mock.py
anchora/tests/: test_api.py  test_compensation.py  test_docker_config.py  test_store.py  test_temporal_integration.py  test_workflow.py
anchora/worker/: worker.py
anchora/workflows/: compensation.py  workflows.py
flowforge/: config.py  integrations.py  store.py
flowforge/activities/: order.py
flowforge/tests/: test_api.py  test_docker_config.py  test_store.py  test_temporal_integration.py  test_workflow.py
flowforge/worker/: worker.py
flowforge/workflows/: workflows.py
src/anchora/: __init__.py  agents.py  cli.py  config.py  state_machine.py  workflow.py
tests/: test_agents.py  test_config.py  test_state_machine.py  test_workflow.py
