[project]
name = "anchora"
version = "0.1.0"
description = "A small smolagents-based workflow engine for sequential AI agent steps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "smolagents[litellm]>=1.26.0",
]

[project.scripts]
anchora = "anchora.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
